# psi

./: .gitignore  Psi.sln
Sources/Integrations/Aria/: README.md
Sources/Integrations/Aria/AriaCaptureServer/: App.config  AriaCaptureServer.csproj  AriaCaptureServer.sln  Program.cs  packages.config
Sources/Integrations/Aria/AriaCaptureServer/Properties/: AssemblyInfo.cs
Sources/Integrations/Aria/AriaCaptureServer/Python/: aria_device_stream.py  aria_streaming_subscribe_send.py  aria_visualizer.py  psi_com.py
Sources/Integrations/Aria/MetaCamWithAudiSample/: MainWindow.xaml.cs  WebcamWithAudioSample.sln
Sources/Integrations/Aria/Microsoft.Psi.Aria.Windows.x64/: Microsoft.Psi.MetaCam.Windows.x64.sln  Microsoft.Psi.RealSense.Windows.x64.csproj  RealSenseSensor.cs
Sources/Integrations/Aria/Microsoft.Psi.Aria_Interop.Windows.x64/: CMakeLists.txt  package-list.txt
Sources/Integrations/Aria/Microsoft.Psi.Aria_VrsToPsi/: Microsoft.Psi.Aria_VrsToPsi.sln
Sources/Integrations/Aria/Microsoft.Psi.Interop/: Microsoft.Psi.Aria.Interop.sln  Microsoft.Psi.Interop.csproj  Readme.md
Sources/Integrations/Aria/Microsoft.Psi.Interop/Format/: CsvFormat.cs  JsonFormat.cs  MessagePackFormat.cs  Readme.md
Sources/Integrations/Aria/Microsoft.Psi.Interop/Serialization/: IFormatDeserializer.cs  IFormatSerializer.cs  IPersistentFormatDeserializer.cs  IPersistentFormatSerializer.cs
Sources/Integrations/Aria/Microsoft.Psi.Interop/Transport/: FileSource.cs  FileWriter.cs  NetMQAriaReader.cs  NetMQAriaReader{T}.cs  NetMQSource.cs  NetMQWriter.cs  NetMQWriter{T}.cs  aria-commands.txt
Sources/Integrations/Aria/vrs/: .gitignore  build-work-recording.txt  clean-build-work-recording.txt
Sources/Integrations/Aria/winnetmq/: aria_device_stream.py  aria_streaming_subscribe_send.py  aria_visualizer.py  winNetMqStreams.cs  winnetmq.csproj  winnetmq.sln
Sources/Runtime/Microsoft.Psi.Interop/: Microsoft.Psi.Interop.csproj
